# SlackChatBot

./: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
environments/terraform/: main.tf  outputs.tf  variables.tf
tests/: test_main.py
